fixes top image height on narrow screen. margins on h1. changes homepage to use object-fit instead of background image to match latest platform change

--- a/homepage.less
+++ b/homepage.less
@@ -227,6 +227,7 @@ article {
 .article {
   position: relative;
   flex: 0 0 50%;
+  overflow: hidden;
 }
 
 
@@ -255,35 +256,30 @@ article {
 }
 
 
-
+// COVER IMAGE
 
 .article .cover {
-  padding: 4px;
-  overflow: hidden;
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  background-size: cover;
-  background-position: center;
-  background-clip: content-box;
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  // N.B. this doesn't work in IE or Edge and generally looks terrible there.
+  // that's currently < 2% of Coda readers however
+  object-fit: cover;
 }
 
 .article.image-right .cover {
-  background-position: right;
+  object-position: right;
 }
 
-.image-left .cover {
-  background-position: left;
+.article.image-left .cover {
+  object-position: left;
 }
 
 
 
-.article .image img {
-  width: 100%;
-}
+
+// HEADERS
 
 .article .headers {
   display:block;
